// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer> -> close: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.2",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> close: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.2",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> custom transition: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.6",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> custom transition: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.6",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> open: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.0",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> open: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.0",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: closed [2] 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.3",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: closed 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.3",
  "isOpen": false,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<Drawer> -> toggle: open 1`] = `
Object {
  "close": [Function],
  "id": "curls.drawer.3",
  "isOpen": true,
  "open": [Function],
  "toggle": [Function],
}
`;

exports[`<DrawerBox> -> as prop 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  top: 0;
  bottom: 0;
  min-height: 100%;
  min-width: auto;
  overflow-y: auto;
  left: 0;
  right: auto;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<span
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.8"
  tabindex="0"
/>
`;

exports[`<DrawerBox> -> box properties 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  top: 0;
  bottom: 0;
  min-height: 100%;
  min-width: auto;
  overflow-y: auto;
  left: 0;
  right: auto;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
  margin-bottom: 1rem;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.11"
  tabindex="0"
/>
`;

exports[`<DrawerBox> -> closed 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  top: 0;
  bottom: 0;
  min-height: 100%;
  min-width: auto;
  overflow-y: auto;
  left: 0;
  right: auto;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.9"
  tabindex="0"
/>
`;

exports[`<DrawerBox> -> element child 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  top: 0;
  bottom: 0;
  min-height: 100%;
  min-width: auto;
  overflow-y: auto;
  left: 0;
  right: auto;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.12"
  tabindex="0"
>
  <div />
</div>
`;

exports[`<DrawerBox> -> open 1`] = `
.emotion-0 {
  display: block;
  position: fixed;
  overflow-y: auto;
  z-index: 1000;
  top: 0;
  bottom: 0;
  min-height: 100%;
  min-width: auto;
  overflow-y: auto;
  left: 0;
  right: auto;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  visibility: hidden;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: visibility,-webkit-transform;
  -webkit-transition-property: visibility,transform;
  transition-property: visibility,transform;
}

<div
  class="emotion-0"
  data-testid="drawer-box"
  id="curls.drawer.10"
  tabindex="0"
/>
`;
